--- a/src/Pokemons.module.scss
+++ b/src/Pokemons.module.scss
@@ -10,6 +10,8 @@
     padding: 0.3rem 0;
     border-block-end: 2px solid transparent;
     direction: ltr;
+    text-transform: capitalize;
+
 }
 
 .link {
